# shopping-list-rust-backend

./: .dockerignore  .env  Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: config.rs  main.rs  router.rs
src/handlers/: auth.rs  shopping.rs
src/middleware/: auth_middleware.rs  log_middleware.rs
src/models/: shopping.rs  user.rs
src/repositories/: shopping_repo.rs
src/services/: auth_service.rs
