[package]
name = "shopping-list-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# MongoDB database
mongodb = "2.8"

# Authentication & password hashing
jsonwebtoken = "9"
argon2 = "0.5"

# Input validation
validator = { version = "0.16", features = ["derive"] }

# Logging & Environment Config
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"

# UUID for generating unique IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Serde for JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tower for HTTP requests
tower = "0.4"
tower-http = "0.5"